--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta
+    <title> Module 4 solution Starter</title>
+    <script>
+      var names = []; 
+    </script>
+    <script src="SpeakHello.js"></script>
+    <script src="SpeakGoodBye.js"></script>
+    <script src="script.js"></script>
   </head>
+  <body>
+    <h1> Module 4 Solution </h1>
+  </body>
 </html>
