--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Module 4 solution Starter</title>
-    <script>
-      var names = []; 
-    </script>
+  
     <script src="SpeakHello.js"></script>
     <script src="SpeakGoodBye.js"></script>
     <script src="script.js"></script>
@@ -14,13 +12,6 @@
     <h1> Module 4 Solution </h1>
     <p>Hello</p>
 <p>Good Bye </p>
-<p> Hello Yaakov</p>
-<p>  Good Bye Yaakov</p>
-<p>Good Bye Henry</p>
-<p>Good Bye Lara</p>
-<p>Hello Paul</p>
-<p>Hello Frank</p>
-<p>Hello Maria</p>
-<p>Good Bye Rim</p>
+<h2>Check out the console in the web developer tools to see if it works!</h2>
   </body>
 </html>
